# EEG-Spectrogram-Classifier

./: .gitignore  Dockerfile  EEG_Seizure_Classification_Pipeline.ipynb  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
src/eeg_classifier/: __init__.py  config.py
src/eeg_classifier/data/: __init__.py  dataset.py  edf_loader.py  labeling.py  windowing.py
src/eeg_classifier/demo/: __init__.py  app.py
src/eeg_classifier/evaluation/: metrics.py
src/eeg_classifier/features/: spectrogram.py
src/eeg_classifier/inference/: predict.py
src/eeg_classifier/models/: __init__.py  autoencoder.py  classifier.py
src/eeg_classifier/training/: pipeline.py  train.py  train_ae.py
tests/: test_config.py  test_dataset.py  test_edf_loader.py  test_labeling.py  test_model_shapes.py  test_spectrogram.py  test_windowing.py
