[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-spectrogram-classifier"
version = "1.0.0"
description = "End-to-end deep learning pipeline for EEG seizure detection using spectrogram-based CNNs and a convolutional autoencoder."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Ahmed Fawaz", email = "ahmedfawaz879@users.noreply.github.com"},
]
keywords = ["eeg", "seizure-detection", "spectrogram", "deep-learning", "pytorch", "autoencoder", "cnn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mne>=1.6.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "mlflow>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
demo = [
    "gradio>=4.0",
]
all = [
    "eeg-spectrogram-classifier[dev,demo]",
]

[project.scripts]
eeg-train = "eeg_classifier.training.train:main"
eeg-train-ae = "eeg_classifier.training.train_ae:main"
eeg-predict = "eeg_classifier.inference.predict:main"

[project.urls]
Homepage = "https://github.com/ahmedfawaz879/EEG-Spectrogram-Classifier"
Repository = "https://github.com/ahmedfawaz879/EEG-Spectrogram-Classifier"
Issues = "https://github.com/ahmedfawaz879/EEG-Spectrogram-Classifier/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
